<resources>
    <string name="app_name">OmniTrail</string>

    <string name="dummy_button">Dummy Button</string>

    <string name="title_activity_religion_home">ReligionHome</string>
    <string name="title_activity_profile">Profile</string>

    <string name="title_activity_temple_home">Temple Home</string>

    <string name="title_activity_saint_home">SaintHome</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OMNITRAIL</string>
    <string name="nav_header_subtitle">Religions through exploring world Trails </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Trails</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_omnihome">OmnihomeActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_acbout">activity_acbout</string>
    <string name="title_activity_howitworks">activity_howitworks</string>
    <string name="please_wait">Please wait...</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_omni_home">MainActivity</string>
    <string name="title_home">Temple</string>
    <string name="title_dashboard">Saint></string>
    <string name="title_notifications">Profile</string>

    <!-- facebook values -->
    <string name="facebook_app_id">449082165999605</string>
    <string name="fb_login_protocol_scheme">fb449082165999605</string>
    <string name="trail_image">Trail Image</string>
    <string name="lengthString">Length:</string>
    <string name="AvgDays">| Est. Days:</string>

</resources>
