<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>


    <group
        android:id="@+id/group_how_work"
        android:checkableBehavior="single">
        <item
            android:id="@+id/how_work"
            android:icon="@drawable/ic_howitwork"
            android:title="Earn your OmniBase" />

        <item
            android:id="@+id/about_club"
            android:icon="@drawable/ic_aboutus"
            android:title="About Omni Trail" />


    </group>


</menu>